crates/rpkl-runtime/tests/snapshots/snapshot_tests__for_generator_with_index.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "items": [
    "a",
    "b",
    "c"
  ],
  "indexed": {
    "0": "a",
    "1": "b",
    "2": "c"
  }
}
