crates/rpkl-runtime/tests/snapshots/snapshot_tests__hex_literals.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1123
expression: eval_pkl(source)
---
{
  "hex1": 255,
  "hex2": 16,
  "hex3": 57005
}
