crates/rpkl-runtime/tests/snapshots/snapshot_tests__hidden_property.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1778
expression: eval_pkl(source)
---
{
  "visible": "public",
  "uses_hidden": "classified"
}
