crates/rpkl-runtime/tests/snapshots/snapshot_tests__import_standalone.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl_file(&path)
---
{
  "defaultHost": "localhost",
  "defaultPort": 8080,
  "fullUrl": "http://localhost:8080",
  "version": "1.0.0"
}
