crates/rpkl-runtime/tests/snapshots/snapshot_tests__int_abs_sign.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": 0,
  "r2": 5,
  "r3": 5,
  "r4": 0,
  "r5": 1,
  "r6": -1
}
