crates/rpkl-runtime/tests/snapshots/snapshot_tests__int_compare_to.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": -1,
  "r2": 1,
  "r3": 0
}
