crates/rpkl-runtime/tests/snapshots/snapshot_tests__int_inv.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": -1,
  "r2": -2,
  "r3": 0
}
