crates/rpkl-runtime/tests/snapshots/snapshot_tests__int_is_odd_is_even.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": false,
  "r2": true,
  "r3": false,
  "r4": true,
  "r5": true,
  "r6": false,
  "r7": true,
  "r8": true
}
